Remove the 'glift.util.none' nonsense.  Some basic work on the board editor.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -145,8 +145,6 @@
 <script type="text/javascript" src="../displays/ids_test.js"></script>
 <script type="text/javascript" src="../displays/position_widget_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
-<!-- Displays board Tests -->
-<script type="text/javascript" src="../displays/board/board_test.js"></script>
 <!-- Displays gui Tests -->
 <script type="text/javascript" src="../displays/gui/center_test.js"></script>
 <script type="text/javascript" src="../displays/gui/split_test.js"></script>
@@ -170,6 +168,7 @@
 <script type="text/javascript" src="../gib/parser_test.js"></script>
 <!-- Controllers Tests -->
 <script type="text/javascript" src="../controllers/base_test.js"></script>
+<script type="text/javascript" src="../controllers/board_editor_test.js"></script>
 <script type="text/javascript" src="../controllers/controllers_test.js"></script>
 <script type="text/javascript" src="../controllers/game_viewer_test.js"></script>
 <script type="text/javascript" src="../controllers/static_problem_test.js"></script>
@@ -219,6 +218,7 @@ $(document).ready(function() {
   glift.controllers.staticProblemTest();
   glift.controllers.controllersTest();
   glift.controllers.gameViewerTest();
+  glift.controllers.boardEditorTest();
 
   glift.displays.gui.centerTest();
   glift.displays.gui.splitTest();
