Some basic work improving options (lots to do). Adding bookData.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -180,6 +180,7 @@
 <script type="text/javascript" src="../bridge/intersections_test.js"></script>
 <script type="text/javascript" src="../bridge/manager_converter_test.js"></script>
 <!-- Widgets Tests -->
+<script type="text/javascript" src="../widgets/options_processing_test.js"></script>
 <script type="text/javascript" src="../widgets/widgets_test.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
@@ -238,6 +239,7 @@ $(document).ready(function() {
 
   // And finally: an end to end test!
   glift.widgets.widgetsTest();
+  glift.widgets.optionsProcessingTest();
 });
 </script>
 
