Fixing a bug with stone clearing.  Updating all examples to 0.10

--- a/src/htmltests/BaseWidgetTest.html
+++ b/src/htmltests/BaseWidgetTest.html
@@ -129,8 +129,8 @@
       <div id="extra_info"></div>
       <script type="text/javascript">
         var basicWidget = glift.create({
-          sgfString: testdata.sgfs.complexproblem,
-          divId: "glift_display1",
+          sgf: testdata.sgfs.complexproblem,
+          divId: 'glift_display1',
           sgfOptions: {
             widgetType: 'STANDARD_PROBLEM'
           }
