--- a/src/htmltests/BoardEditorTester.html
+++ b/src/htmltests/BoardEditorTester.html
@@ -153,10 +153,12 @@
       <script type="text/javascript">
         var boardEditor = glift.create({
           sgf: {},
-          theme: 'DEPTH',
-          goBoardBackground: '../themes/assets/bambootile_warm.jpg',
-          divId: "glift_display1",
-          sgfDefaults: { widgetType: 'BOARD_EDITOR' }
+          divId: 'glift_display1',
+          sgfDefaults: { widgetType: 'BOARD_EDITOR' },
+          display: {
+            theme: 'DEPTH',
+            goBoardBackground: '../themes/assets/bambootile_warm.jpg'
+          }
         });
         $(window).resize(function() {
           boardEditor.destroy().draw();
