--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -131,13 +131,15 @@
         (function() {
           glift.global.performanceDebugLevel = 'INFO';
           gameViewer = glift.create({
+            divId: 'glift_display1',
             sgf: {
               sgfString: testdata.gogameguru_commentary,
               rotation: 'CLOCKWISE_270'
             },
-            theme: 'DEPTH',
-            goBoardBackground: '../themes/assets/bambootile_warm.jpg',
-            divId: 'glift_display1'
+            display: {
+              theme: 'DEPTH',
+              goBoardBackground: '../themes/assets/bambootile_warm.jpg',
+            }
           });
         })();
       </script>
