Added auto-numbering for books.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -162,6 +162,7 @@
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
 <script type="text/javascript" src="../rules/problems_test.js"></script>
 <script type="text/javascript" src="../rules/properties_test.js"></script>
+<script type="text/javascript" src="../rules/treepath_nextmoves_test.js"></script>
 <script type="text/javascript" src="../rules/treepath_test.js"></script>
 <!-- Sgf Tests -->
 <script type="text/javascript" src="../sgf/parser_test.js"></script>
@@ -217,6 +218,7 @@ $(document).ready(function() {
   glift.rules.movetreeTest();
   glift.rules.movenodeTest();
   glift.rules.treepathTest();
+  glift.rules.treepathNextmovesTest();
   glift.rules.gobanTest();
   glift.rules.propertiesTest();
   glift.rules.problemsTest();
