--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -62,6 +62,7 @@
 <!-- Displays diagrams -->
 <script type="text/javascript" src="../displays/diagrams/diagrams.js"></script>
 <script type="text/javascript" src="../displays/diagrams/gooe.js"></script>
+<script type="text/javascript" src="../displays/diagrams/latex.js"></script>
 <script type="text/javascript" src="../displays/diagrams/pdf.js"></script>
 <!-- Displays svg -->
 <script type="text/javascript" src="../displays/svg/svg.js"></script>
