--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -34,6 +34,7 @@
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
+<script type="text/javascript" src="../displays/dom.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
