Fix a bug in Firefox with border-box. Updated to 10.8

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -116,16 +117,18 @@
       * {
         margin: 0;
         padding: 0;
+        position:relative;
       }
       #glift_display1 {
-        height:95%;
+        width:100%;
+        height:300px;
         position:relative;
       }
     </style>
   </head>
 
   <body>
-    <div id="wrap" style="position:relative;">
+    <div id="wrap" style="position:relative; width:100%">
       <div id="gheader"></div>
       <div id="glift_display1"></div>
       <div id="extra_info"></div>
