--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 
@@ -118,7 +119,8 @@
         padding: 0;
       }
       #glift_display1 {
-        height:100%;
+        height:500px;
+        width:100%;
         position:relative;
       }
     </style>
