--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -96,6 +96,7 @@
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
+<script type="text/javascript" src="../rules/autonumber.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
@@ -159,6 +160,7 @@
 <script type="text/javascript" src="../displays/svg/pathutils_test.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj_test.js"></script>
 <!-- Rules Tests -->
+<script type="text/javascript" src="../rules/autonumber_test.js"></script>
 <script type="text/javascript" src="../rules/goban_test.js"></script>
 <script type="text/javascript" src="../rules/movenode_test.js"></script>
 <script type="text/javascript" src="../rules/movetree_test.js"></script>
@@ -224,6 +226,7 @@ $(document).ready(function() {
   glift.rules.gobanTest();
   glift.rules.propertiesTest();
   glift.rules.problemsTest();
+  glift.rules.autonumberTest();
 
   glift.controllers.baseTest();
   glift.controllers.staticProblemTest();
