--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -73,6 +73,7 @@
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
+<script type="text/javascript" src="../rules/autonumber.js"></script>
 <script type="text/javascript" src="../rules/goban.js"></script>
 <script type="text/javascript" src="../rules/movenode.js"></script>
 <script type="text/javascript" src="../rules/movetree.js"></script>
