More work towards configurable components.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -142,6 +142,7 @@
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/ids_test.js"></script>
 <script type="text/javascript" src="../displays/position_widget_test.js"></script>
+<script type="text/javascript" src="../displays/recalc_splits_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
 <!-- Displays gui Tests -->
 <script type="text/javascript" src="../displays/gui/center_test.js"></script>
@@ -194,6 +195,7 @@ $(document).ready(function() {
   glift.displays.cropboxTest();
   glift.displays.environmentTest();
   glift.displays.resizedBoxTest();
+  glift.displays.recalcSplitsTest();
   glift.displays.positionWidgetTest();
   glift.displays.idsTest();
 
