More fixes to hovering / stone events.

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -137,15 +137,14 @@
             testdata.sgfs.complexproblem,
             {
               sgfString: testdata.sgfs.passingExample,
-              initialPosition: 2
-            },
-            {
+              initialPosition: 2,
+              boardRegion: 'BOTTOM_RIGHT'
+            },{
               widgetType: 'EXAMPLE',
               sgfString: testdata.sgfs.trivialproblem,
               rotation: 'CLOCKWISE_270',
               boardRegion: 'TOP_LEFT'
-            },
-            testdata.sgfs.realproblem,
+            },testdata.sgfs.realproblem,
             {
               sgfString: testdata.sgfs.gogameguruHard,
               rotation: 'CLOCKWISE_180',
