Add support for sgfCollections.  Removes support for sgfList.

--- a/src/htmltests/AjaxProblemTester.html
+++ b/src/htmltests/AjaxProblemTester.html
@@ -131,7 +131,7 @@
         //glift.global.performanceDebugLevel = 'info'
         var basicProblem = glift.create({
           divId: "glift_display1",
-          sgfList: [
+          sgfCollection: [
             {
               url: "../testdata/problem9.sgf",
               initialPosition: '1'
