--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -133,7 +133,7 @@
         //glift.global.performanceDebugLevel = 'info'
         var basicProblem = glift.create({
           allowWrapAround: true,
-          sgfList: [
+          sgfCollection: [
             testdata.sgfs.complexproblem,
             {
               sgfString: testdata.sgfs.passingExample,
