archive, update tests.

--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -8,8 +8,108 @@
 <script type="text/javascript" src="../libs/raphael-min.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
-<!-- Compiled -->
-<script type="text/javascript" src="../compiled/glift.js"></script>
+<!-- Otre -->
+<script type="text/javascript" src=".././glift.js"></script>
+<script type="text/javascript" src=".././global.js"></script>
+<!-- Util -->
+<script type="text/javascript" src="../util/util.js"></script>
+<script type="text/javascript" src="../util/colors.js"></script>
+<script type="text/javascript" src="../util/enums.js"></script>
+<script type="text/javascript" src="../util/errors.js"></script>
+<script type="text/javascript" src="../util/id_generator.js"></script>
+<script type="text/javascript" src="../util/key_mappings.js"></script>
+<script type="text/javascript" src="../util/math.js"></script>
+<script type="text/javascript" src="../util/performance.js"></script>
+<script type="text/javascript" src="../util/platform.js"></script>
+<script type="text/javascript" src="../util/point.js"></script>
+<script type="text/javascript" src="../util/regions.js"></script>
+<script type="text/javascript" src="../util/test_util.js"></script>
+<!-- Themes -->
+<script type="text/javascript" src="../themes/themes.js"></script>
+<script type="text/javascript" src="../themes/colorful.js"></script>
+<script type="text/javascript" src="../themes/default.js"></script>
+<script type="text/javascript" src="../themes/depth.js"></script>
+<script type="text/javascript" src="../themes/moody.js"></script>
+<script type="text/javascript" src="../themes/textbook.js"></script>
+<script type="text/javascript" src="../themes/transparent.js"></script>
+<!-- Displays -->
+<script type="text/javascript" src="../displays/displays.js"></script>
+<script type="text/javascript" src="../displays/bbox.js"></script>
+<script type="text/javascript" src="../displays/board_points.js"></script>
+<script type="text/javascript" src="../displays/cropbox.js"></script>
+<script type="text/javascript" src="../displays/dom.js"></script>
+<script type="text/javascript" src="../displays/environment.js"></script>
+<script type="text/javascript" src="../displays/ids.js"></script>
+<script type="text/javascript" src="../displays/line_box.js"></script>
+<script type="text/javascript" src="../displays/position_widget.js"></script>
+<script type="text/javascript" src="../displays/resized_box.js"></script>
+<!-- Displays board -->
+<script type="text/javascript" src="../displays/board/board.js"></script>
+<script type="text/javascript" src="../displays/board/board_base.js"></script>
+<script type="text/javascript" src="../displays/board/buttons.js"></script>
+<script type="text/javascript" src="../displays/board/intersections.js"></script>
+<script type="text/javascript" src="../displays/board/lines.js"></script>
+<script type="text/javascript" src="../displays/board/marks.js"></script>
+<script type="text/javascript" src="../displays/board/starpoints.js"></script>
+<script type="text/javascript" src="../displays/board/stones.js"></script>
+<!-- Displays commentbox -->
+<script type="text/javascript" src="../displays/commentbox/commentbox.js"></script>
+<script type="text/javascript" src="../displays/commentbox/create.js"></script>
+<script type="text/javascript" src="../displays/commentbox/sanitize.js"></script>
+<!-- Displays gui -->
+<script type="text/javascript" src="../displays/gui/gui.js"></script>
+<script type="text/javascript" src="../displays/gui/center.js"></script>
+<!-- Displays icons -->
+<script type="text/javascript" src="../displays/icons/icons.js"></script>
+<script type="text/javascript" src="../displays/icons/bar.js"></script>
+<script type="text/javascript" src="../displays/icons/icon_centering.js"></script>
+<script type="text/javascript" src="../displays/icons/icon_selector.js"></script>
+<script type="text/javascript" src="../displays/icons/svg.js"></script>
+<script type="text/javascript" src="../displays/icons/wrapped_icon.js"></script>
+<!-- Displays svg -->
+<script type="text/javascript" src="../displays/svg/svg.js"></script>
+<script type="text/javascript" src="../displays/svg/pathutils.js"></script>
+<script type="text/javascript" src="../displays/svg/svgobj.js"></script>
+<!-- Rules -->
+<script type="text/javascript" src="../rules/rules.js"></script>
+<script type="text/javascript" src="../rules/autonumber.js"></script>
+<script type="text/javascript" src="../rules/goban.js"></script>
+<script type="text/javascript" src="../rules/movenode.js"></script>
+<script type="text/javascript" src="../rules/movetree.js"></script>
+<script type="text/javascript" src="../rules/problems.js"></script>
+<script type="text/javascript" src="../rules/properties.js"></script>
+<script type="text/javascript" src="../rules/treepath.js"></script>
+<!-- Sgf -->
+<script type="text/javascript" src="../sgf/sgf.js"></script>
+<script type="text/javascript" src="../sgf/parser.js"></script>
+<script type="text/javascript" src="../sgf/props.js"></script>
+<!-- Gib -->
+<script type="text/javascript" src="../gib/gib.js"></script>
+<script type="text/javascript" src="../gib/parser.js"></script>
+<!-- Controllers -->
+<script type="text/javascript" src="../controllers/controllers.js"></script>
+<script type="text/javascript" src="../controllers/base.js"></script>
+<script type="text/javascript" src="../controllers/board_editor.js"></script>
+<script type="text/javascript" src="../controllers/game_viewer.js"></script>
+<script type="text/javascript" src="../controllers/static_problem.js"></script>
+<!-- Bridge -->
+<script type="text/javascript" src="../bridge/bridge.js"></script>
+<script type="text/javascript" src="../bridge/cropping.js"></script>
+<script type="text/javascript" src="../bridge/flattener.js"></script>
+<script type="text/javascript" src="../bridge/intersections.js"></script>
+<!-- Widgets -->
+<script type="text/javascript" src="../widgets/widgets.js"></script>
+<script type="text/javascript" src="../widgets/base_widget.js"></script>
+<script type="text/javascript" src="../widgets/manager.js"></script>
+<!-- Widgets options -->
+<script type="text/javascript" src="../widgets/options/options.js"></script>
+<script type="text/javascript" src="../widgets/options/base_options.js"></script>
+<script type="text/javascript" src="../widgets/options/board_editor.js"></script>
+<script type="text/javascript" src="../widgets/options/correct_variations_problem_options.js"></script>
+<script type="text/javascript" src="../widgets/options/example_options.js"></script>
+<script type="text/javascript" src="../widgets/options/game_viewer_options.js"></script>
+<script type="text/javascript" src="../widgets/options/reduced_game_viewer.js"></script>
+<script type="text/javascript" src="../widgets/options/standard_problem_options.js"></script>
 
 <!-- END-AUTO-GEN-DEPS -->
 
