Add board label drawing option to glift!

--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -46,6 +46,7 @@
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
 <script type="text/javascript" src="../displays/board/board_base.js"></script>
+<script type="text/javascript" src="../displays/board/board_labels.js"></script>
 <script type="text/javascript" src="../displays/board/buttons.js"></script>
 <script type="text/javascript" src="../displays/board/intersections.js"></script>
 <script type="text/javascript" src="../displays/board/lines.js"></script>
