Add compatibility, zoom checks during init.

--- a/src/htmltests/BboxFinder.html
+++ b/src/htmltests/BboxFinder.html
@@ -11,6 +11,7 @@
 <!-- Otre -->
 <script type="text/javascript" src=".././glift.js"></script>
 <script type="text/javascript" src=".././global.js"></script>
+<script type="text/javascript" src=".././init.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
