--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -11,6 +11,7 @@
 <!-- Otre -->
 <script type="text/javascript" src=".././glift.js"></script>
 <script type="text/javascript" src=".././global.js"></script>
+<script type="text/javascript" src=".././init.js"></script>
 <!-- Util -->
 <script type="text/javascript" src="../util/util.js"></script>
 <script type="text/javascript" src="../util/colors.js"></script>
@@ -143,7 +144,8 @@
             display: {
               theme: 'DEPTH',
               goBoardBackground: '../themes/assets/bambootile_warm.jpg',
-              drawBoardCoords: true
+              drawBoardCoords: true,
+              disableZoomForMobile: true
             }
           });
         })();
