--- a/src/htmltests/BaseWidgetTest.html
+++ b/src/htmltests/BaseWidgetTest.html
@@ -24,6 +24,10 @@
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
 <script type="text/javascript" src="../util/test_util.js"></script>
+<!-- Dom -->
+<script type="text/javascript" src="../dom/dom.js"></script>
+<!-- Ajax -->
+<script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="../themes/themes.js"></script>
 <script type="text/javascript" src="../themes/colorful.js"></script>
@@ -37,7 +41,6 @@
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
-<script type="text/javascript" src="../displays/dom.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
