--- a/src/htmltests/MarksTester.html
+++ b/src/htmltests/MarksTester.html
@@ -3,7 +3,6 @@
 <head>
 
 <title> MarksTester </title>
-<script type="text/javascript" src="../libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../testdata/sgfs.js"></script>
 
 <!-- AUTO-GEN-DEPS -->
@@ -24,6 +23,10 @@
 <script type="text/javascript" src="../util/point.js"></script>
 <script type="text/javascript" src="../util/regions.js"></script>
 <script type="text/javascript" src="../util/test_util.js"></script>
+<!-- Dom -->
+<script type="text/javascript" src="../dom/dom.js"></script>
+<!-- Ajax -->
+<script type="text/javascript" src="../ajax/ajax.js"></script>
 <!-- Themes -->
 <script type="text/javascript" src="../themes/themes.js"></script>
 <script type="text/javascript" src="../themes/colorful.js"></script>
@@ -37,7 +40,6 @@
 <script type="text/javascript" src="../displays/bbox.js"></script>
 <script type="text/javascript" src="../displays/board_points.js"></script>
 <script type="text/javascript" src="../displays/cropbox.js"></script>
-<script type="text/javascript" src="../displays/dom.js"></script>
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
@@ -118,9 +120,11 @@
       * {
         margin: 0;
         padding: 0;
+        position: relative;
       }
       #glift_display1 {
-        height:95%;
+        height:500px;
+        width:100%;
         position:relative;
       }
     </style>
