Try #3 to fix zoom. Also, add cap at 20 for # of moves jump button.

--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -141,6 +141,7 @@
             divId: 'glift_display1',
             sgf: {
               sgfString: testdata.gogameguru_commentary,
+              //sgfString: testdata.sgfs.leeGuGame6,
               rotation: 'CLOCKWISE_270'
             },
             display: {
