manually test to ensure that the comment fix is a fix.

--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -126,6 +126,10 @@
         width:100%;
         position:relative;
       }
+      p {
+        margin: 10px;
+        padding: 10px;
+      }
     </style>
   </head>
 
