more work on positioner.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -100,6 +100,10 @@
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- Displays titlebar -->
 <script type="text/javascript" src="../displays/titlebar/titlebar.js"></script>
+<!-- Displays position -->
+<script type="text/javascript" src="../displays/position/position.js"></script>
+<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
+<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/autonumber.js"></script>
@@ -166,6 +170,8 @@
 <!-- Displays svg Tests -->
 <script type="text/javascript" src="../displays/svg/pathutils_test.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj_test.js"></script>
+<!-- Displays position Tests -->
+<script type="text/javascript" src="../displays/position/widget_positioner_test.js"></script>
 <!-- Rules Tests -->
 <script type="text/javascript" src="../rules/autonumber_test.js"></script>
 <script type="text/javascript" src="../rules/goban_test.js"></script>
