--- a/src/htmltests/KogosTester.html
+++ b/src/htmltests/KogosTester.html
@@ -77,6 +77,10 @@
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
 <!-- Displays titlebar -->
 <script type="text/javascript" src="../displays/titlebar/titlebar.js"></script>
+<!-- Displays position -->
+<script type="text/javascript" src="../displays/position/position.js"></script>
+<script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
+<script type="text/javascript" src="../displays/position/widget_positioner.js"></script>
 <!-- Rules -->
 <script type="text/javascript" src="../rules/rules.js"></script>
 <script type="text/javascript" src="../rules/autonumber.js"></script>
