Change title bar to status bar.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -224,6 +224,8 @@ $(document).ready(function() {
 
   glift.displays.commentbox.sanitizeTest();
 
+  glift.displays.position.widgetPositionerTest();
+
   glift.displays.icons.wrappedIconTest();
 
   glift.displays.svg.svgObjTest();
