Add title bar positioning.

--- a/src/htmltests/QunitTest.html
+++ b/src/htmltests/QunitTest.html
@@ -68,7 +68,7 @@
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
-<script type="text/javascript" src="../displays/position_widget.js"></script>
+<script type="text/javascript" src="../displays/not_selectable.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
@@ -98,8 +98,8 @@
 <script type="text/javascript" src="../displays/svg/svg.js"></script>
 <script type="text/javascript" src="../displays/svg/pathutils.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
-<!-- Displays titlebar -->
-<script type="text/javascript" src="../displays/titlebar/titlebar.js"></script>
+<!-- Displays statusbar -->
+<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
 <!-- Displays position -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
@@ -158,8 +158,6 @@
 <script type="text/javascript" src="../displays/cropbox_test.js"></script>
 <script type="text/javascript" src="../displays/environment_test.js"></script>
 <script type="text/javascript" src="../displays/ids_test.js"></script>
-<script type="text/javascript" src="../displays/position_widget_test.js"></script>
-<script type="text/javascript" src="../displays/recalc_splits_test.js"></script>
 <script type="text/javascript" src="../displays/resized_box_test.js"></script>
 <!-- Displays commentbox Tests -->
 <script type="text/javascript" src="../displays/commentbox/sanitize_test.js"></script>
@@ -218,8 +216,6 @@ $(document).ready(function() {
   glift.displays.resizedBoxTest();
   glift.displays.boardPointsTest();
   glift.displays.environmentTest();
-  glift.displays.recalcSplitsTest();
-  glift.displays.positionWidgetTest();
   glift.displays.idsTest();
 
   glift.displays.commentbox.sanitizeTest();
