--- a/src/htmltests/ThemeTester.html
+++ b/src/htmltests/ThemeTester.html
@@ -43,7 +43,7 @@
 <script type="text/javascript" src="../displays/environment.js"></script>
 <script type="text/javascript" src="../displays/ids.js"></script>
 <script type="text/javascript" src="../displays/line_box.js"></script>
-<script type="text/javascript" src="../displays/position_widget.js"></script>
+<script type="text/javascript" src="../displays/not_selectable.js"></script>
 <script type="text/javascript" src="../displays/resized_box.js"></script>
 <!-- Displays board -->
 <script type="text/javascript" src="../displays/board/board.js"></script>
@@ -73,8 +73,8 @@
 <script type="text/javascript" src="../displays/svg/svg.js"></script>
 <script type="text/javascript" src="../displays/svg/pathutils.js"></script>
 <script type="text/javascript" src="../displays/svg/svgobj.js"></script>
-<!-- Displays titlebar -->
-<script type="text/javascript" src="../displays/titlebar/titlebar.js"></script>
+<!-- Displays statusbar -->
+<script type="text/javascript" src="../displays/statusbar/statusbar.js"></script>
 <!-- Displays position -->
 <script type="text/javascript" src="../displays/position/position.js"></script>
 <script type="text/javascript" src="../displays/position/widget_boxes.js"></script>
