Replace currentMoveNumber with method.  Initial work at recording state.

--- a/src/htmltests/ProblemTester.html
+++ b/src/htmltests/ProblemTester.html
@@ -171,9 +171,9 @@
             drawBoardCoords: true
           }
         });
-        $(window).resize(function() {
-          basicProblem.destroy().draw();
-        });
+        window.onresize = function() {
+          basicProblem.redraw();
+        };
       </script>
     </div>
   </body>
