Preserve state during redraw for game-review types.

--- a/src/htmltests/GameViewerTester.html
+++ b/src/htmltests/GameViewerTester.html
@@ -161,6 +161,9 @@
               disableZoomForMobile: true
             }
           });
+          window.onresize = function() {
+            gameViewer.redraw();
+          };
         })();
       </script>
     </div>
